--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	
 		
 <div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<td><img src="jpg/extrim.jpg" title="Мрочковский Николай, Толкачев Алексей - Экстремальный тайм-менеджмент"></td>
+<td><img src="data/07.2023.jpg"></td>
 <td><img src="jpg/zariazhen_na_100.jpg" title="Заряжен на 100%"></td>
 <td><img src="jpg/deti_d'xari_5.jpg" title="Врата тьмы"></td>
 <td><img src="jpg/genii.jpg" title="Гении и аутсайдеры. Почему одним все, а другим ничего?"></td>
@@ -863,7 +865,7 @@
 <table>	<tr> <td><a id="a4" src="jpg/zhivi_oslislenno.jpg" title="Живи осмысленно (аудиокнига)"></a></td> <td><img src="jpg/0.jpg"></td>
 			<td><img src="jpg/12_nedel.jpg" title="12 недель в году"></td> <td><img src="jpg/0.jpg"></td>
 							<td><img src="jpg/yglerod.jpg" title="Видоизмененный углерод"></td> <td><img src="jpg/0.jpg"></td>
-										<td><a id="a27" src="jpg/ekstrim_menedzhment.jpg" title="Мрочковский Николай, Толкачев Алексей - Экстремальный тайм-менеджмент (аудиокнига)"></a></td>
+										<td><img src="jpg/extrim.jpg" title="Мрочковский Николай, Толкачев Алексей - Экстремальный тайм-менеджмент"></td>
 										<td><a id="a29" src="jpg/ekstrim_menedzhment_2.jpg" title="Мрочковский Николай, Толкачев Алексей - Личная власть (аудиокнига)"></a></td>
 										<td><img src="jpg/bistrie_rezultati.jpg" title="Мрочковский Николай, Парабеллум Андрей - Быстрые результаты. 10-дневная программа повышения личной эффективности"></td> </tr> </table>
 	
