Прочитал Магия книгоходцев

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	
 		
 <div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<td><img src="jpg/vshb_1.jpg" title="Высшая Школа Библиотекарей. Магия книгоходцев"></td>
 <td><img src="jpg/extrim.jpg" title="Мрочковский Николай, Толкачев Алексей - Экстремальный тайм-менеджмент"></td>
 <td><img src="data/07.2023.jpg"></td>
 <td><img src="jpg/zariazhen_na_100.jpg" title="Заряжен на 100%"></td>
@@ -642,33 +643,35 @@
 
 	<h4>Дорофеев Максим &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		Дэвич Виктор &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		Дюма Александр &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		Зиглар Зиг &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		Иванов Михаил</h4>			
+		Дюма Александр &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		Завойчинская Милена &nbsp;&nbsp;
+		Зиглар Зиг</h4>			
 <table>	<tr> <td><a id="a36" src="jpg/dzhedaiskie_texniki.jpg" title="Джедайские техники (аудиокнига)"></td> <td><img src="jpg/0.jpg"></td>
 			<td><img src="jpg/8_minyt.jpg" title="8 минут медитации"></td> <td><img src="jpg/0.jpg"></td>
 						<td><img src="jpg/duma_1.jpg" title="Три мушкетёра"></td> <td><img src="jpg/0.jpg"></td>
-									<td><a id="a88" src="jpg/zig.jpg" title="Цели. Как пользоваться жизнью на всю катушку (аудиокнига)"></td> <td><img src="jpg/0.jpg"></td>
-												<td><a id="a110" src="jpg/god_ef.jpg" title="Год личной эффективности (аудиокнига)"></td> </tr> </table>				
-						
-	<h4>Кавадло Дэнни и Эл &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		Кавана Джон &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		Кавашима Рюта</h4>
-<table>	<tr> <td><img src="jpg/denni_kavadlo_1.jpg" title="Дэнни Кавадло - Стена алмазного пресса"></td>
-<td><img src="jpg/denni_kavadlo_2.jpg" title="Дэнни Кавадло - Чистая сила"></td>
-<td><img src="jpg/el_i_denni_kavadlo.jpg" title="Эл и Дэнни Кавадло - Уличные тренировки. Городской воркаут"></td>
-<td><img src="jpg/el_kavadlo_1.jpg" title="Эл Кавадло - Подтянитесь! Уличный фитнес"></td>
-<td><img src="jpg/el_kavadlo_2.jpg" title="Эл Кавадло - Сила без границ"></td>
-<td><img src="jpg/el_kavadlo_3.jpg" title="Эл Кавадло - Экстремальная растяжка"></td> <td><img src="jpg/0.jpg"></td>
-			<td><img src="jpg/conor_mcgregor.jpg" title="Конор Макгрегор. Жизнь без правил"></td> <td><img src="jpg/0.jpg"></td>
-						<td><img src="jpg/kavashima_1.jpg" title="Японская система развития интеллекта и памяти"></td> </tr> </table>
+									<td><img src="jpg/vshb_1.jpg" title="Высшая Школа Библиотекарей. Магия книгоходцев"></td> <td><img src="jpg/0.jpg"></td>
+												<td><a id="a88" src="jpg/zig.jpg" title="Цели. Как пользоваться жизнью на всю катушку (аудиокнига)"></td> </tr> </table>				
 	
-	<h4>Карапинар Онур &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<h4>Иванов Михаил &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		Кавадло Дэнни и Эл &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		Кавана Джон</h4>
+<table>	<tr> <td><a id="a110" src="jpg/god_ef.jpg" title="Год личной эффективности (аудиокнига)"></td> <td><img src="jpg/0.jpg"></td>
+			<td><img src="jpg/denni_kavadlo_1.jpg" title="Дэнни Кавадло - Стена алмазного пресса"></td>
+			<td><img src="jpg/denni_kavadlo_2.jpg" title="Дэнни Кавадло - Чистая сила"></td>
+			<td><img src="jpg/el_i_denni_kavadlo.jpg" title="Эл и Дэнни Кавадло - Уличные тренировки. Городской воркаут"></td>
+			<td><img src="jpg/el_kavadlo_1.jpg" title="Эл Кавадло - Подтянитесь! Уличный фитнес"></td>
+			<td><img src="jpg/el_kavadlo_2.jpg" title="Эл Кавадло - Сила без границ"></td>
+			<td><img src="jpg/el_kavadlo_3.jpg" title="Эл Кавадло - Экстремальная растяжка"></td> <td><img src="jpg/0.jpg"></td>
+						<td><img src="jpg/conor_mcgregor.jpg" title="Конор Макгрегор. Жизнь без правил"></td> </tr> </table>
+	
+	<h4>Кавашима Рюта &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		Карапинар Онур &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		Кардон Грант &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		Карназес Дин</h4>
-<table>	<tr> <td><a id="a98" src="jpg/51_praktika.jpg" title="Маленькие привычки, большие успехи. 51 вдохновляющая практика, чтобы стать лучшей версией себя (аудиокнига)"></td> <td><img src="jpg/0.jpg"></td>
-			<td><img src="jpg/10X.jpg" title="Правило в 10 раз больше"></td> <td><img src="jpg/0.jpg"></td>
-						<td><img src="jpg/beg_bez_sna.jpg" title="Бегущий без сна"></td> </tr> </table>
+<table>	<tr> <td><img src="jpg/kavashima_1.jpg" title="Японская система развития интеллекта и памяти"></td> <td><img src="jpg/0.jpg"></td>
+			<td><a id="a98" src="jpg/51_praktika.jpg" title="Маленькие привычки, большие успехи. 51 вдохновляющая практика, чтобы стать лучшей версией себя (аудиокнига)"></td> <td><img src="jpg/0.jpg"></td>
+						<td><img src="jpg/10X.jpg" title="Правило в 10 раз больше"></td> <td><img src="jpg/0.jpg"></td>
+									<td><img src="jpg/beg_bez_sna.jpg" title="Бегущий без сна"></td> </tr> </table>
 
 	<h4>Карнеги Дейл и др. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		Карпишин Дрю</h4>
