--- a/index.html
+++ b/index.html
@@ -837,7 +837,8 @@
 
 <table><tr align="left"> 
 <th colspan="7"><h4>Кавадло Дэнни и Эл</h4></th>
-<th colspan="2"><h4>Кавана Джон</h4></th>
+<th colspan="3"><h4>Кавана Джон &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					Кавашима Рюта</h4></th>
 </tr><tr>   
 <th><img src="jpg/denni_kavadlo_1.jpg" title="Дэнни Кавадло - Стена алмазного пресса"></th>
 <th><img src="jpg/denni_kavadlo_2.jpg" title="Дэнни Кавадло - Чистая сила"></th>
@@ -847,18 +848,17 @@
 <th><img src="jpg/el_kavadlo_3.jpg" title="Эл Кавадло - Экстремальная растяжка"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/conor_mcgregor.jpg" title="Конор Макгрегор. Жизнь без правил"></th> <th><img src="jpg/0.jpg"></th>
+
+<th><img src="jpg/kavashima_1.jpg" title="Японская система развития интеллекта и памяти"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4>Кавашима Рюта</h4></th>
 <th colspan="2"><h4>Карапинар Онур</h4></th>
 <th colspan="2"><h4>Кардон Грант</h4></th>
 <th colspan="2"><h4>Карназес Дин</h4>
 </tr><tr>   
-<th><img src="jpg/kavashima_1.jpg" title="Японская система развития интеллекта и памяти"></th> <th><img src="jpg/0.jpg"></th>
-
 <th><a id="a98" src="jpg/51_praktika.jpg" title="Маленькие привычки, большие успехи. 51 вдохновляющая практика, чтобы стать лучшей версией себя (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/10X.jpg" title="Правило в 10 раз больше"></th> <th><img src="jpg/0.jpg"></th>
