Прочитал Боевая практика книгоходцев

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/vshb_2.jpg" title="Высшая Школа Библиотекарей. Боевая практика книгоходцев"></th>
 <th><img src="jpg/vshb_1.jpg" title="Высшая Школа Библиотекарей. Магия книгоходцев"></th>
 <th><img src="jpg/extrim.jpg" title="Мрочковский Николай, Толкачев Алексей - Экстремальный тайм-менеджмент"></th>
 	<th><img src="data/07.2023.jpg"></th>
@@ -823,7 +824,7 @@
 <th colspan="2"><h4>Иванов Михаил</h4></th>
 </tr><tr>   
 <th><img src="jpg/vshb_1.jpg" title="Высшая Школа Библиотекарей. Магия книгоходцев"></th> 
-<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/vshb_2.jpg" title="Высшая Школа Библиотекарей. Боевая практика книгоходцев"></th> 
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/0.jpg"></th> <th><img src="jpg/0.jpg"></th>
