Прочитал Книгоходцы особого назначения

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/vshb_3.jpg" title="Высшая Школа Библиотекарей. Книгоходцы особого назначения"></th>
 <th><img src="jpg/vshb_2.jpg" title="Высшая Школа Библиотекарей. Боевая практика книгоходцев"></th>
 <th><img src="jpg/vshb_1.jpg" title="Высшая Школа Библиотекарей. Магия книгоходцев"></th>
 <th><img src="jpg/extrim.jpg" title="Мрочковский Николай, Толкачев Алексей - Экстремальный тайм-менеджмент"></th>
@@ -825,7 +826,7 @@
 </tr><tr>   
 <th><img src="jpg/vshb_1.jpg" title="Высшая Школа Библиотекарей. Магия книгоходцев"></th> 
 <th><img src="jpg/vshb_2.jpg" title="Высшая Школа Библиотекарей. Боевая практика книгоходцев"></th> 
-<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/vshb_3.jpg" title="Высшая Школа Библиотекарей. Книгоходцы особого назначения"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/0.jpg"></th> <th><img src="jpg/0.jpg"></th>
 
