Прочитал Компас питания

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/kompas.jpg" title="Компас питания. Важные выводы о питании, касающиеся каждого из нас"></th>		
 <th><img src="jpg/vshb_3.jpg" title="Высшая Школа Библиотекарей. Книгоходцы особого назначения"></th>
 <th><img src="jpg/vshb_2.jpg" title="Высшая Школа Библиотекарей. Боевая практика книгоходцев"></th>
 <th><img src="jpg/vshb_1.jpg" title="Высшая Школа Библиотекарей. Магия книгоходцев"></th>
@@ -891,29 +892,32 @@
 <table><tr align="left"> 
 <th colspan="2"><h4>Карри Мейсон</h4></th>
 <th colspan="2"><h4>Карсон Бен</h4></th>
+<th colspan="2"><h4>Каст Бас</h4></th>
 <th colspan="2"><h4>Кауфман Джош</h4></th>
-<th colspan="3"><h4>Кехо Джон</h4></th>
-<th colspan="2"><h4>Киз Грегори</h4></th>
+<th colspan="2"><h4>Кехо Джон</h4></th>
 </tr><tr>  
 <th><img src="jpg/rezhim_genia.jpg" title="Режим гения. Распорядок дня великих людей"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/misli_shiroko.jpg" title="Мысли широко"></th> <th><img src="jpg/0.jpg"></th>
 
+<th><img src="jpg/kompas.jpg" title="Компас питания. Важные выводы о питании, касающиеся каждого из нас"></th> <th><img src="jpg/0.jpg"></th>		
+
 <th><img src="jpg/mba.jpg" title="Сам себе MBA. Самообразование на 100%"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/podsoznaniye_mozhet_vse.jpg" title="Подсознание может всё!"></th>
-<th><img src="jpg/dengi_yspex_i_vi.jpg" title="Деньги, успех и Вы"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/TES.jpg" title="The Elder Scrolls. Адский город"></th>
+<th><img src="jpg/dengi_yspex_i_vi.jpg" title="Деньги, успех и Вы"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Киз Грегори</h4></th>
 <th colspan="3"><h4>Киз Дэниел</h4></th>
-<th colspan="4"><h4>Кийосаки Роберт</h4></th>
-<th colspan="2"><h4>Кинг Бернард</h4></th>
+<th colspan="5"><h4>Кийосаки Роберт &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					Кинг Бернард</h4></th>
 </tr><tr>  
+<th><img src="jpg/TES.jpg" title="The Elder Scrolls. Адский город"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/billy_milligan.jpg" title="Таинственная история Билли Миллигана"></th>
 <th><img src="jpg/tsvety_dlya_eldzhernona.jpg" title="Цветы для Элджернона"></th> <th><img src="jpg/0.jpg"></th>
 
