Прочитал Книгоходцы и тайна Механического бога

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/vshb_4.jpg" title="Высшая Школа Библиотекарей. Книгоходцы и тайна Механического бога"></th>
 <th><img src="jpg/kompas.jpg" title="Компас питания. Важные выводы о питании, касающиеся каждого из нас"></th>		
 <th><img src="jpg/vshb_3.jpg" title="Высшая Школа Библиотекарей. Книгоходцы особого назначения"></th>
 <th><img src="jpg/vshb_2.jpg" title="Высшая Школа Библиотекарей. Боевая практика книгоходцев"></th>
@@ -828,7 +829,7 @@
 <th><img src="jpg/vshb_1.jpg" title="Высшая Школа Библиотекарей. Магия книгоходцев"></th> 
 <th><img src="jpg/vshb_2.jpg" title="Высшая Школа Библиотекарей. Боевая практика книгоходцев"></th> 
 <th><img src="jpg/vshb_3.jpg" title="Высшая Школа Библиотекарей. Книгоходцы особого назначения"></th>
-<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/vshb_4.jpg" title="Высшая Школа Библиотекарей. Книгоходцы и тайна Механического бога"></th>
 <th><img src="jpg/0.jpg"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a88" src="jpg/zig.jpg" title="Цели. Как пользоваться жизнью на всю катушку (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
