--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/zamok_1.jpg" title="Замок Россия"></th>		
+	<th><img src="data/08.2023.jpg"></th>		
 <th><img src="jpg/vshb_5.jpg" title="Высшая Школа Библиотекарей. Хроники книгоходцев"></th>		
 <th><img src="jpg/vshb_4.jpg" title="Высшая Школа Библиотекарей. Книгоходцы и тайна Механического бога"></th>
 <th><img src="jpg/kompas.jpg" title="Компас питания. Важные выводы о питании, касающиеся каждого из нас"></th>		
@@ -735,11 +737,14 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4>Дейда Дэвид</h4></th>
+<th colspan="2"><h4>Денисов Вадим</h4></th>
 <th colspan="3"><h4>Дефо Даниэль</h4></th>
 <th colspan="2"><h4>Джайлс Льюри</h4></th>
 <th colspan="2"><h4>Джей Мэг</h4></th>
 </tr><tr>
 <th><a id="a10" src="jpg/pyt_na100iaschego.jpg" title="Путь настоящего мужчины (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
+
+<th><img src="jpg/zamok_1.jpg" title="Замок Россия"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/robinzon_kruzo.jpg" title="Робинзон Крузо"></th>
 <th><img src="jpg/robinzon_kruzo_2.jpg" title="Дальнейшие приключения Робинзона Крузо"></th> <th><img src="jpg/0.jpg"></th>
