Прочитал Думай и богатей

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/hill_1.jpg" title="Думай и богатей"></th> 
 <th><img src="jpg/zamok_1.jpg" title="Замок Россия"></th>		
 	<th><img src="data/08.2023.jpg"></th>		
 <th><img src="jpg/vshb_5.jpg" title="Высшая Школа Библиотекарей. Хроники книгоходцев"></th>		
