Прочитал Прыгни выше головы

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/prigni_vishe.jpg" title="Прыгни выше головы!"></th>
 <th><img src="jpg/hill_1.jpg" title="Думай и богатей"></th> 
 <th><img src="jpg/zamok_1.jpg" title="Замок Россия"></th>		
 	<th><img src="data/08.2023.jpg"></th>		
@@ -626,31 +627,33 @@
 <table><tr align="left"> 
 <th colspan="2"><h4>Гоголь Н.В.</h4></th>
 <th colspan="3"><h4>Голден Кристи</h4></th>
+<th colspan="2"><h4>Голдсмит Маршалл</h4></th>
 <th colspan="2"><h4>Гомер</h4></th>
-<th colspan="3"><h4>Горд Егор &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					Гордон Догерти</h4></th>
+<th colspan="1"><h4>Горд Егор</h4></th>
 </tr><tr>
 <th><img src="jpg/mertvie_dyshi.jpg" title="Мертвые души"></th> <th><img src="jpg/0.jpg"></th> 
 
 <th><img src="jpg/kristi_golden_1.jpg" title="Assassins Creed. Кредо убийцы"></th>
 <th><img src="jpg/kristi_golden_2.jpg" title="Assassins Creed. Ересь"></th> <th><img src="jpg/0.jpg"></th> 
 
+<th><img src="jpg/prigni_vishe.jpg" title="Прыгни выше головы!"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/odisseia.jpg" title="Одиссея"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><a id="a86" src="jpg/run_hack.jpg" title="RUN хакер. Беговые лайфхаки на каждый день (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th> 
-
-<th><img src="jpg/assassins_10.jpg" title="Одиссея"></th>
+<th><a id="a86" src="jpg/run_hack.jpg" title="RUN хакер. Беговые лайфхаки на каждый день (аудиокнига)"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Гордон Догерти</h4></th>
 <th colspan="2"><h4>Гоулстон Марк</h4></th>
 <th colspan="2"><h4>Гриллс Беар</h4></th>
 <th colspan="3"><h4>Грин Роберт</h4></th>
-<th colspan="3"><h4>Гровер Тим &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					Грэм Бенджамин</h4></th>
+<th colspan="1"><h4>Гровер Тим</h4></th>
 </tr><tr>
+<th><img src="jpg/assassins_10.jpg" title="Одиссея"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/mudak.jpg" title="Как разговаривать с мудаками"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a32" src="jpg/grills_1.jpg" title="Грязь, пот и слезы (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
@@ -658,8 +661,13 @@
 <th><a id="a24" src="jpg/48_zakonov_vlasti.jpg" title="48 законов власти (аудиокнига)"></th> 
 <th><img src="jpg/master_igri.jpg" title="Мастер игры"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><img src="jpg/manifest.jpg" title="Манифест великого тренера как стать из хорошего спортсмена великим чемпионом"></th> <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/manifest.jpg" title="Манифест великого тренера как стать из хорошего спортсмена великим чемпионом"></th> </tr></table>
 
+
+
+<table><tr align="left"> 
+<th colspan="2"><h4>Грэм Бенджамин</h4></th>
+</tr><tr>	
 <th><a id="a67" src="jpg/r_investor.jpg" title="Разумный инвестор (аудиокнига)"></th>  
 </tr></table>
 
