--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/zamok_2.jpg" title="Экспансия"></th>	
 	<th><img src="data/09.2023.jpg"></th>	
 <th><img src="jpg/prigni_vishe.jpg" title="Прыгни выше головы!"></th>
 <th><img src="jpg/hill_1.jpg" title="Думай и богатей"></th> 
@@ -747,29 +748,30 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4>Дейда Дэвид</h4></th>
-<th colspan="2"><h4>Денисов Вадим</h4></th>
+<th colspan="3"><h4>Денисов Вадим</h4></th>
 <th colspan="3"><h4>Дефо Даниэль</h4></th>
 <th colspan="2"><h4>Джайлс Льюри</h4></th>
-<th colspan="2"><h4>Джей Мэг</h4></th>
 </tr><tr>
 <th><a id="a10" src="jpg/pyt_na100iaschego.jpg" title="Путь настоящего мужчины (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><img src="jpg/zamok_1.jpg" title="Замок Россия"></th> <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/zamok_1.jpg" title="Замок Россия"></th>
+<th><img src="jpg/zamok_2.jpg" title="Экспансия"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/robinzon_kruzo.jpg" title="Робинзон Крузо"></th>
 <th><img src="jpg/robinzon_kruzo_2.jpg" title="Дальнейшие приключения Робинзона Крузо"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a38" src="jpg/kak_coca_cola.jpg" title="Как Coca-Cola завоевала мир. 101 успешный кейс от брендов с мировым именем (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><a id="a16" src="jpg/vazhnie_godi.jpg" title="Важные годы (аудиокнига)"></a></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Джей Мэг</h4></th>
 <th colspan="4"><h4>Джеймс Эрика</h4></th>
 <th colspan="2"><h4>Дип Сэм</h4></th>
 </tr><tr>
+<th><a id="a16" src="jpg/vazhnie_godi.jpg" title="Важные годы (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th> 
+
 <th><img src="jpg/50_ottenkov_1.jpg" title="Пятьдесят оттенков серого"></th>
 <th><img src="jpg/50_ottenkov_2.jpg" title=" На пятьдесят оттенков темнее"></th>
 <th><img src="jpg/50_ottenkov_3.jpg" title=" На пятьдесят оттенков светлее"></th> <th><img src="jpg/0.jpg"></th>
