Прочитал Одной любви не достаточно

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/12_voprosov.jpg" title="Одной любви недостаточно. 12 вопросов, на которые нужно ответить, прежде чем решиться на брак"></th>
 <th><img src="jpg/zamok_2.jpg" title="Экспансия"></th>	
 	<th><img src="data/09.2023.jpg"></th>	
 <th><img src="jpg/prigni_vishe.jpg" title="Прыгни выше головы!"></th>
