--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head><meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
 <link rel="stylesheet" media="screen" type="text/css" title="Style" href="./css/style.css">
 <!-- Горизонтальный блок --> <div id="block"> </div> <!-- --> 
+<!-- Пробел --> &nbsp; <!-- --> 
 <title>Books</title>
 </head><body><div id="body"><div id="body-con">
 
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/zamok_3.jpg" title="Спасатель"></th>	
 <th><a id="a118" src="jpg/atomic_heart.jpg" title="Atomic Heart. Предыстория Предприятия 3826 (аудиокнига)"></a></th>
 <th><img src="jpg/12_voprosov.jpg" title="Одной любви недостаточно. 12 вопросов, на которые нужно ответить, прежде чем решиться на брак"></th>
 <th><img src="jpg/zamok_2.jpg" title="Экспансия"></th>	
@@ -750,19 +752,20 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4>Дейда Дэвид</h4></th>
-<th colspan="3"><h4>Денисов Вадим</h4></th>
-<th colspan="3"><h4>Дефо Даниэль</h4></th>
-<th colspan="2"><h4>Джайлс Льюри</h4></th>
+<th colspan="4"><h4>Денисов Вадим</h4></th>
+<th colspan="4"><h4>Дефо Даниэль &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					Джайлс Льюри</h4></th>
 </tr><tr>
 <th><a id="a10" src="jpg/pyt_na100iaschego.jpg" title="Путь настоящего мужчины (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/zamok_1.jpg" title="Замок Россия"></th>
-<th><img src="jpg/zamok_2.jpg" title="Экспансия"></th> <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/zamok_2.jpg" title="Экспансия"></th>
+<th><img src="jpg/zamok_3.jpg" title="Спасатель"></th>	 <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/robinzon_kruzo.jpg" title="Робинзон Крузо"></th>
 <th><img src="jpg/robinzon_kruzo_2.jpg" title="Дальнейшие приключения Робинзона Крузо"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><a id="a38" src="jpg/kak_coca_cola.jpg" title="Как Coca-Cola завоевала мир. 101 успешный кейс от брендов с мировым именем (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
+<th><a id="a38" src="jpg/kak_coca_cola.jpg" title="Как Coca-Cola завоевала мир. 101 успешный кейс от брендов с мировым именем (аудиокнига)"></th>
 </tr></table>
 
 
