--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
 <th><img src="jpg/zamok_3.jpg" title="Спасатель"></th>	
+	<th><img src="data/10.2023.jpg"></th>	
 <th><a id="a118" src="jpg/atomic_heart.jpg" title="Atomic Heart. Предыстория Предприятия 3826 (аудиокнига)"></a></th>
 <th><img src="jpg/12_voprosov.jpg" title="Одной любви недостаточно. 12 вопросов, на которые нужно ответить, прежде чем решиться на брак"></th>
 <th><img src="jpg/zamok_2.jpg" title="Экспансия"></th>	
