Прочитал Богатый папа, бедный папа

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/robert_kiyosaki_1.jpg" title="Богатый папа, бедный папа"></th>
 <th><img src="jpg/zamok_3.jpg" title="Спасатель"></th>	
 	<th><img src="data/10.2023.jpg"></th>	
 <th><a id="a118" src="jpg/atomic_heart.jpg" title="Atomic Heart. Предыстория Предприятия 3826 (аудиокнига)"></a></th>
