--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/will.jpg" title="Will. Чему может научить нас простой парень, ставший самым высокооплачиваемым актером Голливуда"></th>		
 <th><img src="jpg/robert_kiyosaki_1.jpg" title="Богатый папа, бедный папа"></th>
 <th><img src="jpg/zamok_3.jpg" title="Спасатель"></th>	
 	<th><img src="data/10.2023.jpg"></th>	
@@ -1436,11 +1437,14 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4>Скотт Стив</h4></th>
+<th colspan="2"><h4>Смит Уилл</h4></th>
 <th colspan="2"><h4>Солженицын А.И.</h4></th>
 <th colspan="2"><h4>Соренсен Майкл</h4></th>
 <th colspan="2"><h4>Спунер Ребекка</h4></th>
 </tr><tr>  
 <th><a id="a74" src="jpg/127_privichek.jpg" title="Лучше каждый день. 127 полезных привычек для здоровья, счастья и успеха (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+
+<th><img src="jpg/will.jpg" title="Will. Чему может научить нас простой парень, ставший самым высокооплачиваемым актером Голливуда"></th> <th><img src="jpg/0.jpg"></th>	
 
 <th><a id="a101" src="jpg/1_den.jpg" title="Один день Ивана Денисовича (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
