Прочитал Русский Союз

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/zamok_4.jpg" title="Русский Союз"></th>	
 <th><img src="jpg/will.jpg" title="Will. Чему может научить нас простой парень, ставший самым высокооплачиваемым актером Голливуда"></th>		
 <th><img src="jpg/robert_kiyosaki_1.jpg" title="Богатый папа, бедный папа"></th>
 <th><img src="jpg/zamok_3.jpg" title="Спасатель"></th>	
@@ -755,29 +756,30 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4>Дейда Дэвид</h4></th>
-<th colspan="4"><h4>Денисов Вадим</h4></th>
-<th colspan="4"><h4>Дефо Даниэль &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					Джайлс Льюри</h4></th>
+<th colspan="5"><h4>Денисов Вадим</h4></th>
+<th colspan="4"><h4>Дефо Даниэль</h4></th>
 </tr><tr>
 <th><a id="a10" src="jpg/pyt_na100iaschego.jpg" title="Путь настоящего мужчины (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/zamok_1.jpg" title="Замок Россия"></th>
 <th><img src="jpg/zamok_2.jpg" title="Экспансия"></th>
-<th><img src="jpg/zamok_3.jpg" title="Спасатель"></th>	 <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/zamok_3.jpg" title="Спасатель"></th>
+<th><img src="jpg/zamok_4.jpg" title="Русский Союз"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/robinzon_kruzo.jpg" title="Робинзон Крузо"></th>
-<th><img src="jpg/robinzon_kruzo_2.jpg" title="Дальнейшие приключения Робинзона Крузо"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><a id="a38" src="jpg/kak_coca_cola.jpg" title="Как Coca-Cola завоевала мир. 101 успешный кейс от брендов с мировым именем (аудиокнига)"></th>
+<th><img src="jpg/robinzon_kruzo_2.jpg" title="Дальнейшие приключения Робинзона Крузо"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Джайлс Льюри</h4></th>	
 <th colspan="2"><h4>Джей Мэг</h4></th>
 <th colspan="4"><h4>Джеймс Эрика</h4></th>
 <th colspan="2"><h4>Дип Сэм</h4></th>
 </tr><tr>
+<th><a id="a38" src="jpg/kak_coca_cola.jpg" title="Как Coca-Cola завоевала мир. 101 успешный кейс от брендов с мировым именем (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><a id="a16" src="jpg/vazhnie_godi.jpg" title="Важные годы (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th> 
 
 <th><img src="jpg/50_ottenkov_1.jpg" title="Пятьдесят оттенков серого"></th>
