Почему богатые становятся богаче

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pochemy_bogatie.jpg" title="Почему богатые становятся богаче"></th>
 <th><a id="a119" src="jpg/1001_noch.jpg" title="Тысяча и одна ночь. Сказки Шахерезады. Самая полная версия (аудиокнига)"></a></th>
 <th><img src="jpg/zamok_4.jpg" title="Русский Союз"></th>	
 <th><img src="jpg/will.jpg" title="Will. Чему может научить нас простой парень, ставший самым высокооплачиваемым актером Голливуда"></th>		
@@ -946,8 +947,7 @@
 <table><tr align="left"> 
 <th colspan="2"><h4>Киз Грегори</h4></th>
 <th colspan="3"><h4>Киз Дэниел</h4></th>
-<th colspan="5"><h4>Кийосаки Роберт &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					Кинг Бернард</h4></th>
+<th colspan="4"><h4>Кийосаки Роберт</h4></th>
 </tr><tr>  
 <th><img src="jpg/TES.jpg" title="The Elder Scrolls. Адский город"></th> <th><img src="jpg/0.jpg"></th>
 
@@ -956,18 +956,20 @@
 
 <th><img src="jpg/robert_kiyosaki_1.jpg" title="Богатый папа, бедный папа"></th>
 <th><img src="jpg/robert_kiyosaki_2.jpg" title="Как стать богатым, не отказываясь от кредитных карточек"></th>
-<th><img src="jpg/dar_midasa.jpg" title="Трамп Дональд, Кийосаки Роберт  - Дар Мидаса"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><a id="a2" src="jpg/privychki_uspeshnykh_lyudey.jpg" title="Привычки успешных людей (аудиокнига)"></a></th>
+<th><img src="jpg/dar_midasa.jpg" title="Трамп Дональд, Кийосаки Роберт  - Дар Мидаса"></th> 
+<th><img src="jpg/pochemy_bogatie.jpg" title="Почему богатые становятся богаче"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Кинг Бернард</h4></th>
 <th colspan="3"><h4>Кинг Стивен</h4></th>
 <th colspan="2"><h4>Киплинг Редьярд</h4></th>
 <th colspan="3"><h4>Кирби Мэтью</h4></th>
 </tr><tr>  
+<th><a id="a2" src="jpg/privychki_uspeshnykh_lyudey.jpg" title="Привычки успешных людей (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/pobeg_iz_shoushenka.jpg" title="Рита Хейуорт и спасение из Шоушенка"></th>
 <th><img src="jpg/zelenaya_milya.jpg" title="Зеленая Миля"></th> <th><img src="jpg/0.jpg"></th>
 
