Прочитал С тобой я дома

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/s_toboi.jpg" title="С тобой я дома. Книга о том, как любить друг друга, оставаясь верными себе"></th>
 <th><img src="jpg/pochemy_bogatie.jpg" title="Почему богатые становятся богаче"></th>
 <th><a id="a119" src="jpg/1001_noch.jpg" title="Тысяча и одна ночь. Сказки Шахерезады. Самая полная версия (аудиокнига)"></a></th>
 <th><img src="jpg/zamok_4.jpg" title="Русский Союз"></th>	
@@ -1291,6 +1292,7 @@
 <th colspan="4"><h4>Портнягин Дмитрий</h4></th>
 <th colspan="2"><h4>Прайор Карен</h4></th>
 <th colspan="2"><h4>Прессфилд Стивен</h4></th>
+<th colspan="2"><h4>Примаченко Ольга</h4></th>
 </tr><tr>  
 <th><a id="a19" src="jpg/transformator.jpg" title="Трансформатор (аудиокнига)"></a></th> 
 <th><img src="jpg/transformator_2.jpg" title="Трансформатор 2. Как развить скорость в бизнесе и не сгореть"></th>
@@ -1299,6 +1301,8 @@
 <th><a id="a13" src="jpg/ne_ruchite_na_sobaky.jpg" title="Не рычите на собаку! (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/voina_za_kreativ.jpg" title="Война за креатив. Как преодолеть внутренние барьеры и начать творить"></th> <th><img src="jpg/0.jpg"></th>
+
+<th><img src="jpg/s_toboi.jpg" title="С тобой я дома. Книга о том, как любить друг друга, оставаясь верными себе"></th> <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
