--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/zamok_5.jpg" title="Колония"></th>			
 <th><img src="jpg/s_toboi.jpg" title="С тобой я дома. Книга о том, как любить друг друга, оставаясь верными себе"></th>
 <th><img src="jpg/pochemy_bogatie.jpg" title="Почему богатые становятся богаче"></th>
 <th><a id="a119" src="jpg/1001_noch.jpg" title="Тысяча и одна ночь. Сказки Шахерезады. Самая полная версия (аудиокнига)"></a></th>
@@ -762,15 +763,16 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4>Дейда Дэвид</h4></th>
-<th colspan="5"><h4>Денисов Вадим</h4></th>
-<th colspan="4"><h4>Дефо Даниэль</h4></th>
+<th colspan="6"><h4>Денисов Вадим</h4></th>
+<th colspan="2"><h4>Дефо Даниэль</h4></th>
 </tr><tr>
 <th><a id="a10" src="jpg/pyt_na100iaschego.jpg" title="Путь настоящего мужчины (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/zamok_1.jpg" title="Замок Россия"></th>
 <th><img src="jpg/zamok_2.jpg" title="Экспансия"></th>
 <th><img src="jpg/zamok_3.jpg" title="Спасатель"></th>
-<th><img src="jpg/zamok_4.jpg" title="Русский Союз"></th> <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/zamok_4.jpg" title="Русский Союз"></th>
+<th><img src="jpg/zamok_5.jpg" title="Колония"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/robinzon_kruzo.jpg" title="Робинзон Крузо"></th>
 <th><img src="jpg/robinzon_kruzo_2.jpg" title="Дальнейшие приключения Робинзона Крузо"></th> 
