--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+	<th><img src="data/11.2023.jpg"></th>	
 <th><img src="jpg/zamok_5.jpg" title="Колония"></th>			
 <th><img src="jpg/s_toboi.jpg" title="С тобой я дома. Книга о том, как любить друг друга, оставаясь верными себе"></th>
 <th><img src="jpg/pochemy_bogatie.jpg" title="Почему богатые становятся богаче"></th>
