--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a120" src="jpg/zamok_6.jpg" title="Командировка (аудиокнига)"></a></th>
 	<th><img src="data/11.2023.jpg"></th>	
 <th><img src="jpg/zamok_5.jpg" title="Колония"></th>			
 <th><img src="jpg/s_toboi.jpg" title="С тобой я дома. Книга о том, как любить друг друга, оставаясь верными себе"></th>
@@ -765,7 +766,6 @@
 <table><tr align="left"> 
 <th colspan="2"><h4>Дейда Дэвид</h4></th>
 <th colspan="6"><h4>Денисов Вадим</h4></th>
-<th colspan="2"><h4>Дефо Даниэль</h4></th>
 </tr><tr>
 <th><a id="a10" src="jpg/pyt_na100iaschego.jpg" title="Путь настоящего мужчины (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 
@@ -773,31 +773,37 @@
 <th><img src="jpg/zamok_2.jpg" title="Экспансия"></th>
 <th><img src="jpg/zamok_3.jpg" title="Спасатель"></th>
 <th><img src="jpg/zamok_4.jpg" title="Русский Союз"></th>
-<th><img src="jpg/zamok_5.jpg" title="Колония"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/robinzon_kruzo.jpg" title="Робинзон Крузо"></th>
-<th><img src="jpg/robinzon_kruzo_2.jpg" title="Дальнейшие приключения Робинзона Крузо"></th> 
+<th><img src="jpg/zamok_5.jpg" title="Колония"></th>
+<th><a id="a120" src="jpg/zamok_6.jpg" title="Командировка (аудиокнига)"></a></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="3"><h4>Дефо Даниэль</h4></th>
 <th colspan="2"><h4>Джайлс Льюри</h4></th>	
 <th colspan="2"><h4>Джей Мэг</h4></th>
-<th colspan="4"><h4>Джеймс Эрика</h4></th>
-<th colspan="2"><h4>Дип Сэм</h4></th>
+<th colspan="3"><h4>Джеймс Эрика</h4></th>
 </tr><tr>
+<th><img src="jpg/robinzon_kruzo.jpg" title="Робинзон Крузо"></th>
+<th><img src="jpg/robinzon_kruzo_2.jpg" title="Дальнейшие приключения Робинзона Крузо"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><a id="a38" src="jpg/kak_coca_cola.jpg" title="Как Coca-Cola завоевала мир. 101 успешный кейс от брендов с мировым именем (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a16" src="jpg/vazhnie_godi.jpg" title="Важные годы (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th> 
 
 <th><img src="jpg/50_ottenkov_1.jpg" title="Пятьдесят оттенков серого"></th>
 <th><img src="jpg/50_ottenkov_2.jpg" title=" На пятьдесят оттенков темнее"></th>
-<th><img src="jpg/50_ottenkov_3.jpg" title=" На пятьдесят оттенков светлее"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/pyt_k_yspehy.jpg" title="Сэм Дип и Лил Сесмен - Верный путь к успеху"></th> 
+<th><img src="jpg/50_ottenkov_3.jpg" title=" На пятьдесят оттенков светлее"></th>
 </tr></table>
 
+
+
+<table><tr align="left"> 
+<th colspan="2"><h4>Дип Сэм</h4></th>
+</tr><tr>
+<th><img src="jpg/pyt_k_yspehy.jpg" title="Сэм Дип и Лил Сесмен - Верный путь к успеху"></th>  <th><img src="jpg/0.jpg"></th>
+</tr></table>
 
 
 <table><tr align="left"> 
