--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a121" src="jpg/zamok_6.jpg" title="Возвращение (аудиокнига)"></a></th>
 <th><a id="a120" src="jpg/zamok_6.jpg" title="Командировка (аудиокнига)"></a></th>
 	<th><img src="data/11.2023.jpg"></th>	
 <th><img src="jpg/zamok_5.jpg" title="Колония"></th>			
@@ -774,7 +775,8 @@
 <th><img src="jpg/zamok_3.jpg" title="Спасатель"></th>
 <th><img src="jpg/zamok_4.jpg" title="Русский Союз"></th>
 <th><img src="jpg/zamok_5.jpg" title="Колония"></th>
-<th><a id="a120" src="jpg/zamok_6.jpg" title="Командировка (аудиокнига)"></a></th> 
+<th><a id="a120" src="jpg/zamok_6.jpg" title="Командировка (аудиокнига)"></a></th>
+<th><a id="a121" src="jpg/zamok_6.jpg" title="Возвращение (аудиокнига)"></a></th> 
 </tr></table>
 
 
