Прочитал Четвертое крыло

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a122" src="jpg/4_krilo.jpg" title="Четвертое крыло (аудиокнига)"></a></th>
 <th><a id="a121" src="jpg/zamok_6.jpg" title="Возвращение (аудиокнига)"></a></th>
 <th><a id="a120" src="jpg/zamok_6.jpg" title="Командировка (аудиокнига)"></a></th>
 	<th><img src="data/11.2023.jpg"></th>	
@@ -1742,13 +1743,19 @@
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Яррос Ребекка</h4></th>	
 <th colspan="4"><h4>Python</h4></th>
 </tr><tr>  
+<th><a id="a122" src="jpg/4_krilo.jpg" title="Четвертое крыло (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/python_1.jpg" title="Swaroop Chitlur - A Byte of Python (Russian)"></th>
 <th><img src="jpg/python_2.jpg" title="МакГрат Майк - Программирование на Python для начинающих"></th> 
 <th><img src="jpg/python_3.jpg" title="Бэрри Пол - Изучаем программирование на Python"></th>
 <th><img src="jpg/algoritmi.jpg" title="Бхаргава Адитья - Грокаем алгоритмы"></th> 
 </tr></table>
+
+
+
 
 
 
