Прочитал Письма о добром и прекрасном

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pisma.jpg" title="Письма о добром и прекрасном"></th>			
 <th><a id="a122" src="jpg/4_krilo.jpg" title="Четвертое крыло (аудиокнига)"></a></th>
 <th><a id="a121" src="jpg/zamok_6.jpg" title="Возвращение (аудиокнига)"></a></th>
 <th><a id="a120" src="jpg/zamok_6.jpg" title="Командировка (аудиокнига)"></a></th>
@@ -1111,8 +1112,8 @@
 <th colspan="2"><h4>Ларссен Эрик</h4></th>
 <th colspan="3"><h4>Лаундес Лейл</h4></th>
 <th colspan="2"><h4>Лесков Н.С.</h4></th>
-<th colspan="2"><h4>Лесли Алекс</h4></th>
-<th colspan="1"><h4>Лоэр Джим</h4></th>
+<th colspan="3"><h4>Лесли Алекс &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					Лихачев Дмитрий</h4></th>
 </tr><tr>  
 <th><a id="a12" src="jpg/na_predele.jpg" title="На пределе. Неделя без жалости к себе (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
@@ -1123,6 +1124,14 @@
 
 <th><img src="jpg/lesly_1.jpg" title="Жжизнь без трусов"></th> <th><img src="jpg/0.jpg"></th>
 
+<th><img src="jpg/pisma.jpg" title="Письма о добром и прекрасном"></th>	
+</tr></table>
+
+
+
+<table><tr align="left"> 
+<th colspan="1"><h4>Лоэр Джим</h4></th>
+</tr><tr>  
 <th><img src="jpg/zhizn_na_polnoi.jpg" title="Лоэр Джим, Шварц Тони - Жизнь на полной мощности"></th> 
 </tr></table>
 
