--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+	<th><img src="data/12.2023.jpg"></th>
 <th><img src="jpg/pisma.jpg" title="Письма о добром и прекрасном"></th>			
 <th><a id="a122" src="jpg/4_krilo.jpg" title="Четвертое крыло (аудиокнига)"></a></th>
 <th><a id="a121" src="jpg/zamok_6.jpg" title="Возвращение (аудиокнига)"></a></th>
