--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/everyone_ironman.jpg" title="Железный человек есть в каждом"></th>		
 	<th><img src="data/12.2023.jpg"></th>
 <th><img src="jpg/pisma.jpg" title="Письма о добром и прекрасном"></th>			
 <th><a id="a122" src="jpg/4_krilo.jpg" title="Четвертое крыло (аудиокнига)"></a></th>
@@ -1092,30 +1093,32 @@
 <table><tr align="left"> 
 <th colspan="2"><h4>Круз Кевин</h4></th>
 <th colspan="2"><h4>Кутузов Максим</h4></th>
+<th colspan="2"><h4>Кэллос Джон</h4></th>
 <th colspan="2"><h4>Кэмпбелл Джозеф</h4></th>
 <th colspan="2"><h4>Лайфхакер</h4></th>
-<th colspan="2"><h4>Лао-Цзы</h4></th>
 </tr><tr>  
 <th><a id="a85" src="jpg/15_time.jpg" title="15 секретов управления временем. Как успешные люди успевают всё (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/knyaz_oboroten.jpg" title="Князь-ваўкалак"></th> <th><img src="jpg/0.jpg"></th>
 
+<th><img src="jpg/everyone_ironman.jpg" title="Железный человек есть в каждом"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><a id="a9" src="jpg/1000likii.jpg" title="Тысячеликий герой (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
-<th><a id="a102" src="jpg/55_idei.jpg" title="55 светлых идей по улучшению себя и своей жизни (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/dao_d_czin.jpg" title="Дао Дэ Цзин"></th>
+<th><a id="a102" src="jpg/55_idei.jpg" title="55 светлых идей по улучшению себя и своей жизни (аудиокнига)"></a></th> 
 </tr> </table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Лао-Цзы</h4></th>
 <th colspan="2"><h4>Ларссен Эрик</h4></th>
 <th colspan="3"><h4>Лаундес Лейл</h4></th>
 <th colspan="2"><h4>Лесков Н.С.</h4></th>
-<th colspan="3"><h4>Лесли Алекс &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					Лихачев Дмитрий</h4></th>
+<th colspan="2"><h4>Лесли Алекс</h4></th>
 </tr><tr>  
+<th><img src="jpg/dao_d_czin.jpg" title="Дао Дэ Цзин"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><a id="a12" src="jpg/na_predele.jpg" title="На пределе. Неделя без жалости к себе (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/s.s.s.jpg" title="С.С.С."></th>
@@ -1123,17 +1126,18 @@
 
 <th><a id="a93" src="jpg/levsha.jpg" title="Левша (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
-<th><img src="jpg/lesly_1.jpg" title="Жжизнь без трусов"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/pisma.jpg" title="Письма о добром и прекрасном"></th>	
+<th><img src="jpg/lesly_1.jpg" title="Жжизнь без трусов"></th> 
 </tr></table>
 
 
 
-<table><tr align="left"> 
-<th colspan="1"><h4>Лоэр Джим</h4></th>
+<table><tr align="left">
+<th colspan="2"><h4>Лихачев Дмитрий</h4></th>
+<th colspan="2"><h4>Лоэр Джим</h4></th>
 </tr><tr>  
-<th><img src="jpg/zhizn_na_polnoi.jpg" title="Лоэр Джим, Шварц Тони - Жизнь на полной мощности"></th> 
+<th><img src="jpg/pisma.jpg" title="Письма о добром и прекрасном"></th>	<th><img src="jpg/0.jpg"></th>
+
+<th><img src="jpg/zhizn_na_polnoi.jpg" title="Лоэр Джим, Шварц Тони - Жизнь на полной мощности"></th> <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
